tests/baselines/reference/optionalBindingParameters2.errors.txt
tests/cases/conformance/es6/destructuring/optionalBindingParameters2.ts(1,14): error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
tests/cases/conformance/es6/destructuring/optionalBindingParameters2.ts(7,5): error TS2345: Argument of type '{ x: 真假; y: 数字; z: ""; }' is not assignable to parameter of type '{ x: 文字; y: 数字; z: 真假; }'.
  Types of property 'x' are incompatible.
    Type '真假' is not assignable to type '文字'.


==== tests/cases/conformance/es6/destructuring/optionalBindingParameters2.ts (2 errors) ====
    function foo({ x, y, z }?: { x: string; y: number; z: boolean }) {
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: A binding pattern parameter cannot be optional in an implementation signature.
    
    }
    
    foo({ x: "", y: 0, z: false });
    
    foo({ x: false, y: 0, z: "" });
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: 真假; y: 数字; z: ""; }' is not assignable to parameter of type '{ x: 文字; y: 数字; z: 真假; }'.
!!! error TS2345:   Types of property 'x' are incompatible.
!!! error TS2345:     Type '真假' is not assignable to type '文字'.